Update experiences and resume

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,7 +103,7 @@
     <img class="profile-image" src="../assets/images/profileImage.jpg" />
     <div class="text-container">
       <h1 class="hello-text">Hello 👋 <br />I'm Chee Heng</h1>
-      <p class="aboutme-text">Year 3 Computer Engineering Student from National University Singapore (NUS).</p>
+      <p class="aboutme-text">Final Year Computer Engineering Student from National University Singapore (NUS).</p>
       <div class="button-container">
         <button class="btn btn-dark github-button" style="margin-top: 4%"
           onclick="window.open('https://github.com/cheehengk', '_blank');">
@@ -197,6 +197,14 @@
         <div data-aos="flip-left" class="skill-container">
           <img class="skill-icon" src="../assets/images/docker.svg" />
           <p class="skills-name">Docker</p>
+        </div>
+        <div data-aos="flip-left" class="skill-container">
+          <img class="skill-icon" src="../assets/images/mongo.svg" />
+          <p class="skills-name">MongoDB</p>
+        </div>
+        <div data-aos="flip-left" class="skill-container">
+          <img class="skill-icon" src="../assets/images/spark.svg" />
+          <p class="skills-name">Spark</p>
         </div>
       </div>
     </div>
@@ -413,7 +421,7 @@
           <h3>National University Singapore</h3>
           <h4>Major in Computer Engineering</h4>
           <p>
-            Relevant Coursework: Programming Methodology, Data Structures and Algorithms, Introduction to Machine Learning, Software Engineering and Object‐ Oriented Programming, Blockchain Engineering, Calculus, Discrete Structures, Linear Algebra
+            Relevant Coursework: Data Structures and Algorithms, Machine Learning, Software Engineering, Computer Networks, Database Systems, Operating Systems, Blockchain Engineering.
           </p>
         </div>
       </li>
@@ -437,11 +445,47 @@
         <label class="timeline-event-icon"></label>
         <div class="timeline-event-copy">
           <p class="timeline-event-thumbnail">May 2023 - Aug 2023</p>
+          <h3>HubbedIn</h3>
+          <h4>Software Engineering Intern</h4>
+          <ul style="margin-bottom: 5%;">
+            <li>
+              Enhanced the Enterprise Resource Planning system with Express, enabling real-time synchronization and expanding the product’s applicability to physical retail environments, setting it on track for deployment in eight stores.
+            </li>
+            <li>
+              Iteratively developed and deployed a comprehensive financial accounting feature tailored to client requirements, enabling accurate and efficient monthly reconciliation for B2B sales and point of sale transactions.
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li data-aos="fade-down" class="timeline-event">
+        <label class="timeline-event-icon"></label>
+        <div class="timeline-event-copy">
+          <p class="timeline-event-thumbnail">May 2023 - Aug 2023</p>
+          <h3>Real Estate Analytics</h3>
+          <h4>Software Developer Intern</h4>
+          <ul style="margin-bottom: 5%;">
+            <li>
+              Craft intuitive and responsive user interfaces for real estate professionals at major firms in Singapore and Hong Kong, enhancing user experience and functionality for 66% of the real estate sector.
+            </li>
+            <li>
+              Automated dynamic PDF report generation features, streamlining client data report creation and eliminating manual statistics entry, saving one hour of effort per report.
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li data-aos="fade-down" class="timeline-event">
+        <label class="timeline-event-icon"></label>
+        <div class="timeline-event-copy">
+          <p class="timeline-event-thumbnail">May 2023 - Aug 2023</p>
           <h3>AlphaTrue</h3>
           <h4>Software Engineering Intern</h4>
           <ul style="margin-bottom: 5%;">
-            <li>Designed and implemented AI powered features for web applications and crafted APIs to enhance and support features.</li>
-            <li>Developed AI agents and established supporting databases, including vector embedding databases.</li>
+            <li>
+              Engineered and fine-tuned APIs using Flask, improving response efficiency by implementing Redis queues and distributed worker nodes across isolated containers on Google Cloud, leading to enhanced system scalability.
+            </li>
+            <li>
+              Designed and implemented AI features for search engine optimization product using large language models, transformers, and vector databases, setting the foundation for improved content visibility and click-through rates.
+            </li>
           </ul>
         </div>
       </li>
@@ -510,7 +554,7 @@
           <h3>SRA Retail Reimagined Innovation Challenge</h3>
           <h4>Finalist and Best Teamwork Awards</h4>
           <p>
-            Proposed Augmented Reality and Blockchain solution to scale retail businesses towards Web3.0technologies.
+            Proposed Augmented Reality and Blockchain solution to scale retail businesses towards Web3.0 technologies.
           </p>
         </div>
       </li>
