--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,8 +102,8 @@
   <div data-aos="fade-down" id="welcome" class="welcome-page">
     <img class="profile-image" src="../assets/images/profileImage.jpg" />
     <div class="text-container">
-      <h1 class="hello-text">Hello 👋 <br />I'm Chee Heng</h1>
-      <p class="aboutme-text">Final Year Computer Engineering Student from National University Singapore (NUS).</p>
+      <h1 class="hello-text">Hello 🚀 <br />I'm Chee Heng</h1>
+      <p class="aboutme-text">Software Engineer and Computer Engineering Graduate</p>
       <div class="button-container">
         <button class="btn btn-dark github-button" style="margin-top: 4%"
           onclick="window.open('https://github.com/cheehengk', '_blank');">
@@ -113,15 +113,6 @@
               d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
           </svg>
           <p style="font-size: 1.25em; margin: 0">Github</p>
-        </button>
-        <button class="btn btn-dark github-button linkedin-button" style="margin-top: 4%"
-          onclick="window.open('../assets/pdf/cheeheng_cv.pdf', '_blank');">
-          <svg xmlns="http://www.w3.org/2000/svg" width="1.25em" height="1.25em" fill="currentColor"
-            class="bi bi-file-earmark-person-fill" viewBox="0 0 16 16">
-            <path
-              d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zM11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 5.755V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1v-.245S4 12 8 12s5 1.755 5 1.755z" />
-          </svg>
-          <p style="font-size: 1.25em; margin: 0">Resume</p>
         </button>
       </div>
     </div>
@@ -151,16 +142,16 @@
           <p class="skills-name">JS</p>
         </div>
         <div data-aos="flip-left" class="skill-container">
+          <img class="skill-icon" src="../assets/images/go.svg" />
+          <p class="skills-name">Go</p>
+        </div>
+        <div data-aos="flip-left" class="skill-container">
           <img class="skill-icon" src="../assets/images/C.webp" />
           <p class="skills-name">C</p>
         </div>
         <div data-aos="flip-left" class="skill-container">
           <img class="skill-icon" src="../assets/images/solidity.svg" />
           <p class="skills-name">Solidity</p>
-        </div>
-        <div data-aos="flip-left" class="skill-container">
-          <img class="skill-icon" src="../assets/images/sql.webp" />
-          <p class="skills-name">SQL</p>
         </div>
       </div>
     </div>
@@ -173,6 +164,10 @@
         <div data-aos="flip-left" class="skill-container">
           <img class="skill-icon" src="../assets/images/django-icon-0.webp" />
           <p class="skills-name">Django</p>
+        </div>
+        <div data-aos="flip-left" class="skill-container">
+          <img class="skill-icon" src="../assets/images/spring.svg" />
+          <p class="skills-name">Spring</p>
         </div>
         <div data-aos="flip-left" class="skill-container">
           <i class="fa-brands fa-react skill-icon" style="color: #61dbfb"></i>
@@ -205,24 +200,6 @@
         <div data-aos="flip-left" class="skill-container">
           <img class="skill-icon" src="../assets/images/spark.svg" />
           <p class="skills-name">Spark</p>
-        </div>
-      </div>
-    </div>
-    <!-- Others -->
-    <div data-aos="zoom-in" class="languages-container">
-      <h4 style="margin-bottom: 3vh; font-size: 1.5rem">Others</h4>
-      <div class="skills-container">
-        <div data-aos="flip-left" class="skill-container" style="width: 6rem">
-          <i class="fa-brands fa-figma skill-icon"></i>
-          <p class="skills-name">Figma</p>
-        </div>
-        <div data-aos="flip-left" class="skill-container" style="width: 6rem">
-          <img class="skill-icon" src="../assets/images/ps_icon.webp" />
-          <p class="skills-name">Photoshop</p>
-        </div>
-        <div data-aos="flip-left" class="skill-container" style="width: 6rem">
-          <img class="skill-icon" src="../assets/images/fcpx.png" />
-          <p class="skills-name">Final Cut</p>
         </div>
       </div>
     </div>
@@ -417,12 +394,17 @@
       <li data-aos="fade-down" class="timeline-event">
         <label class="timeline-event-icon"></label>
         <div class="timeline-event-copy">
-          <p class="timeline-event-thumbnail">Aug 2021 - Present</p>
+          <p class="timeline-event-thumbnail">Aug 2021 - May 2025</p>
           <h3>National University Singapore</h3>
-          <h4>Major in Computer Engineering</h4>
-          <p>
-            Relevant Coursework: Data Structures and Algorithms, Machine Learning, Software Engineering, Computer Networks, Database Systems, Operating Systems, Blockchain Engineering.
-          </p>
+          <h4>Computer Engineering (First Class Honors)</h4>
+        </div>
+      </li>
+      <li data-aos="fade-down" class="timeline-event">
+        <label class="timeline-event-icon"></label>
+        <div class="timeline-event-copy">
+          <p class="timeline-event-thumbnail">Aug 2023 - Dec 2023</p>
+          <h3>Boston University</h3>
+          <h4>Student Exchange</h4>
         </div>
       </li>
       <li data-aos="fade-down" class="timeline-event">
@@ -431,11 +413,6 @@
           <p class="timeline-event-thumbnail">Jan 2017 - Dec 2018</p>
           <h3>Anglo-Chinese School (Independent)</h3>
           <h4>International Baccalaureate</h4>
-          <p>
-            <strong>Physics, Chemistry, Math, Economics</strong><br />
-            Activities and Societies: St John Brigade Singapore, Football Club<br />
-            Awards: National Youth Achievement Award (Gold), Academic Achievement Award, Uniform Groups Distinguished Service Award
-          </p>
         </div>
       </li>
     </ul>
@@ -444,17 +421,17 @@
       <li data-aos="fade-down" class="timeline-event">
         <label class="timeline-event-icon"></label>
         <div class="timeline-event-copy">
-          <p class="timeline-event-thumbnail">May 2023 - Aug 2023</p>
+          <p class="timeline-event-thumbnail">Jul 2025 - Present</p>
+          <h3>TikTok</h3>
+          <h4>Backend Software Engineer</h4>
+        </div>
+      </li>
+      <li data-aos="fade-down" class="timeline-event">
+        <label class="timeline-event-icon"></label>
+        <div class="timeline-event-copy">
+          <p class="timeline-event-thumbnail">Jul 2024 - Dec 2024</p>
           <h3>HubbedIn</h3>
           <h4>Software Engineering Intern</h4>
-          <ul style="margin-bottom: 5%;">
-            <li>
-              Enhanced the Enterprise Resource Planning system with Express, enabling real-time synchronization and expanding the product’s applicability to physical retail environments, setting it on track for deployment in eight stores.
-            </li>
-            <li>
-              Iteratively developed and deployed a comprehensive financial accounting feature tailored to client requirements, enabling accurate and efficient monthly reconciliation for B2B sales and point of sale transactions.
-            </li>
-          </ul>
         </div>
       </li>
       <li data-aos="fade-down" class="timeline-event">
@@ -462,15 +439,7 @@
         <div class="timeline-event-copy">
           <p class="timeline-event-thumbnail">May 2023 - Aug 2023</p>
           <h3>Real Estate Analytics</h3>
-          <h4>Software Developer Intern</h4>
-          <ul style="margin-bottom: 5%;">
-            <li>
-              Craft intuitive and responsive user interfaces for real estate professionals at major firms in Singapore and Hong Kong, enhancing user experience and functionality for 66% of the real estate sector.
-            </li>
-            <li>
-              Automated dynamic PDF report generation features, streamlining client data report creation and eliminating manual statistics entry, saving one hour of effort per report.
-            </li>
-          </ul>
+          <h4>Software Developer</h4>
         </div>
       </li>
       <li data-aos="fade-down" class="timeline-event">
@@ -479,14 +448,6 @@
           <p class="timeline-event-thumbnail">May 2023 - Aug 2023</p>
           <h3>AlphaTrue</h3>
           <h4>Software Engineering Intern</h4>
-          <ul style="margin-bottom: 5%;">
-            <li>
-              Engineered and fine-tuned APIs using Flask, improving response efficiency by implementing Redis queues and distributed worker nodes across isolated containers on Google Cloud, leading to enhanced system scalability.
-            </li>
-            <li>
-              Designed and implemented AI features for search engine optimization product using large language models, transformers, and vector databases, setting the foundation for improved content visibility and click-through rates.
-            </li>
-          </ul>
         </div>
       </li>
       <li data-aos="fade-down" class="timeline-event">
@@ -495,23 +456,6 @@
           <p class="timeline-event-thumbnail">Apr 2021 - Jun 2021</p>
           <h3>National University of Singapore</h3>
           <h4>Teaching Assistant, Student Advisor</h4>
-          <ul style="margin-bottom: 5%;">
-            <li>Conducted tutorials and assisted in coursework grading for Software Engineering and Object‐Oriented Programming course.</li>
-            <li>Advised software engineering teams in technical and project management aspects.</li>
-            <li>Performed administrative duties and database management.</li>
-          </ul>
-        </div>
-      </li>
-      <li data-aos="fade-down" class="timeline-event">
-        <label class="timeline-event-icon"></label>
-        <div class="timeline-event-copy">
-          <p class="timeline-event-thumbnail">Jan 2019 - Feb 2021</p>
-          <h3>Singapore Armed Forces</h3>
-          <h4>Command School Instructor</h4>
-          <ul style="margin-bottom: 5%;">
-            <li>Trained and led cohorts of cadets in command school to ensure quality of leaders in the force.</li>
-            <li>Facilitated and maintained online‐learning process of cadets and provided basic technical support.</li>
-          </ul>
         </div>
       </li>
     </ul>
